--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </p>
                     <div class="buttom">
                         <a href="">Preebook Now</a>
+                        <i id="arrow" class="fa-solid fa-arrow-right"></i>
                     </div>
                 </div>
                 <div class="header-img">
@@ -117,10 +118,34 @@
                     <span>4.99</span>
                     <p>This Product Available Now</p>
                 </div>
+                <p class="see-more">See more</p>
+                <i id="arrow-2" class="fa-solid fa-arrow-right"></i>
             </div>
-
+        </section>
+        <section class="content-3">
+            <div class="imges">
+                <img src="gear.png" alt="">
+            </div>
+            <div class="last-info">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit
+                    mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <div class="last-button">
+                    <a id="last-id" href="">Join now</a>
+                    <i id="arrow-right" class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="last-footer">
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020 influencer products</p>
+            <p>All rights reserved</p>
+            <img src="Social Links.png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
