added new hover

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="all-here">
     <header>
         <nav class="nav">
             <p class="nav-title">Influencer products</p>
@@ -35,7 +35,7 @@
                         products
                     </p>
                     <div class="buttom">
-                        <a href="">Preebook Now</a>
+                        <a target="_blank" href="https://www.camerahouse.com.au/">Preebook Now</a>
                         <i id="arrow" class="fa-solid fa-arrow-right"></i>
                     </div>
                 </div>
@@ -56,9 +56,9 @@
                     <img src="tripod.png" alt="">
                     <h2>Flex Tripod</h2>
                     <p class="price">$50.48</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                     <span>4.99</span>
                     <p>This Product Available Now</p>
@@ -67,10 +67,10 @@
                     <img src="mic.png" alt="">
                     <h2>Mairophone</h2>
                     <p class="price">$120.25</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star-half-stroke"></i>
                     <span>4.99</span>
                     <p>This Product Available Now</p>
                 </div>
@@ -78,10 +78,10 @@
                     <img src="action.png" alt="">
                     <h2>Action Camera</h2>
                     <p class="price">$100</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star-half-stroke"></i>
                     <span>4.99</span>
                     <p>This Product Available Now</p>
                 </div>
@@ -89,10 +89,10 @@
                     <img src="drone.png" alt="">
                     <h2>Drone</h2>
                     <p class="price">$980.23</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star-half-stroke"></i>
                     <span>4.99</span>
                     <p>This Product Available Now</p>
                 </div>
@@ -100,10 +100,10 @@
                     <img src="lights.png" alt="">
                     <h2>Light Setup</h2>
                     <p class="price">$1200.00</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star-half-stroke"></i>
                     <span>4.99</span>
                     <p>This Product Available Now</p>
                 </div>
@@ -111,10 +111,10 @@
                     <img src="setup.png" alt="">
                     <h2>Light Setup</h2>
                     <p class="price">$1500.00</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star"></i>
+                    <i id="y-color" class="fa-solid fa-star-half-stroke"></i>
                     <span>4.99</span>
                     <p>This Product Available Now</p>
                 </div>
@@ -132,7 +132,7 @@
                     duis enim velit
                     mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 <div class="last-button">
-                    <a id="last-id" href="">Join now</a>
+                    <a target="_blank" id="last-id" href="https://www.youtube.com/watch?v=F4gsRAr4Hak">Join now</a>
                     <i id="arrow-right" class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
